Applying Andres's code edit

--- a/site/guide/model-validation/manage-model-finding-fields.qmd
+++ b/site/guide/model-validation/manage-model-finding-fields.qmd
@@ -131,7 +131,7 @@ return base_days * urgency_multiplier
 # Combine finding types with custom fields and parent model data
 
 risk_factor = custom_field_risk_score or 1.0
-model_criticality = parent_model_params.get("criticality_level", "medium")
+model_criticality = params.model.get("criticality_level", "medium")
 
 if finding_type.tag == "VALIDATION_ISSUE" and model_criticality == "high":
     return risk_factor * 3.0
