docs & training: Calculation Finding Fields (#988)
* Draft: Calculation Finding Fields

* Draft: Calculation Finding Fields in training

* Save point

* Cleaning up

* Proofreading

* Save point

* Update site/guide/model-inventory/_field-types.qmd

Co-authored-by: Nik Richers <nik@validmind.ai>

* Update _field-types.qmd

* Applying Andres's code edit

---------

Co-authored-by: Nik Richers <nik@validmind.ai>

--- a/site/guide/model-inventory/_add-edit-inventory-fields.qmd
+++ b/site/guide/model-inventory/_add-edit-inventory-fields.qmd
@@ -6,8 +6,9 @@
 
 To add a new inventory field, click **{{< fa plus >}} Add Field**:
 
-a. Inventory fields require a [type]{.smallcaps},^[[Inventory field types](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)] a [name]{.smallcaps}, and a [description]{.smallcaps}.
+a. Inventory fields require a **[type]{.smallcaps}**^[[Inventory field types](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)] and a **[name]{.smallcaps}**.
 
+    - (Optional) Enter a **[description]{.smallcaps}** to indicate the purpose of the field.
     - (Optional) You can also choose to indicate that a field is **[required when creating models]{.smallcaps}**.
     - (Optional) You can also assign a field to a group.^[[Add inventory field groups](/guide/model-inventory/manage-model-inventory-fields.qmd#add-inventory-field-groups)]
     - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.[^edit-fields]
@@ -54,8 +55,9 @@ a. Make your desired changes to your inventory field, then click **Save**.
     - Click **{{< fa plus >}} Add Field** to add a new field.
     - Hover over a field and select **{{< fa pencil >}} Edit** under the Actions column to edit that field.
 
-1. Inventory fields require a [type]{.smallcaps}, a [name]{.smallcaps}, and a [description]{.smallcaps}.
+1. Inventory fields require a **[type]{.smallcaps}** and a **[name]{.smallcaps}**.
 
+    - (Optional) Enter a **[description]{.smallcaps}** to indicate the purpose of the field.
     - (Optional) You can also choose to indicate that a field is **[required when creating models]{.smallcaps}**.
     - (Optional) You can also assign a field to a group.
     - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.
