--- a/site/guide/model-inventory/_field-types.qmd
+++ b/site/guide/model-inventory/_field-types.qmd
@@ -26,12 +26,12 @@ Number
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-![Simple number field type](number-simple.png){fig-alt="A screenshot showing a simple number field type" .screenshot group="number"} 
+![Simple number field type](/guide/model-inventory/number-simple.png){fig-alt="A screenshot showing a simple number field type" .screenshot group="number"} 
 
 :::
 
 ::: {.w-40-ns}
-![Currency number field type](number-currency.png){fig-alt="A screenshot showing a currency number field type" .screenshot group="number"}
+![Currency number field type](/guide/model-inventory/number-currency.png){fig-alt="A screenshot showing a currency number field type" .screenshot group="number"}
 
 :::
 
@@ -63,29 +63,7 @@ Calculation <span id="calculation"></span>
 
     1. Click **{{< fa plus >}}** in front of the inventory field to allow your formula access to the field's values.
     2. Replace the demonstration formula with your own in the code box provided.
-    3. Enter in sample values in the testing area then click **{{< fa play >}} Test Formula** to validate your formula.
-
-::: {.callout title="Stick to basic operations."}
-Keep your code simple and avoid complex logic and imports.
-:::
-
-For example, say you have numeric model inventory fields of `materiality` and `complexity`, where a larger value indicates a lower risk: 
-
-![Adding a calculation type field](calculation-field.png){fig-alt="A screenshot showing the screen for adding a calculation type field" width=90% .screenshot}
-
-::: {.column-margin}
-```python
-    def formula(params):
-        # High Risk: If materiality is high risk, return high risk regardless of complexity
-        if params.materiality == "High Risk":
-                return "High Risk"
-        # Medium Risk: If materiality is low risk but complexity is high risk, return medium risk
-        if params.materiality == "Low Risk" and params.complexity  == "High Risk":
-                return "Medium Risk"
-        # Low Risk: Both materiality and complexity are low risk
-        return "Low Risk"
-```
-:::
+    3. Enter in sample values in the testing area then click **{{< fa play >}} Test Calculation** to validate your formula.
 
 ::::
 
@@ -111,8 +89,8 @@ Checkbox
 Number
 : Text value in valid number format. Number display (comma, fullstop, etc.) is determined by your browser's locale. Select a **[number type]{.smallcaps}**:
 
-- **Simple** — Define the [decimal places]{.smallcaps} that the number should be displayed up to and any [large number abbreviation]{.smallcaps}s.
-- **Currency** — Define the [currency]{.smallcaps} you would like the field to display in, as well as the [decimal places]{.smallcaps} that the number should be displayed up to and any [large number abbreviation]{.smallcaps}s.
+    - **Simple** — Define the [decimal places]{.smallcaps} that the number should be displayed up to and any [large number abbreviation]{.smallcaps}s.
+    - **Currency** — Define the [currency]{.smallcaps} you would like the field to display in, as well as the [decimal places]{.smallcaps} that the number should be displayed up to and any [large number abbreviation]{.smallcaps}s.
 
 URL
 : Text value in valid URL format.
