--- a/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
+++ b/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
@@ -23,14 +23,14 @@ listing:
     - path: customizing-your-model-inventory.html
       title: "Customizing Your Model Inventory"
       subtitle: "Module 2"
-      description: "{{< fa check >}} Configure model inventory fields <br> {{< fa check >}} Customize document templates <br> {{< fa check >}} Configure reusable blocks"
-      reading-time: "20"
+      description: "{{< fa check >}} Configure model inventory & finding fields <br> {{< fa check >}} Customize document templates <br> {{< fa check >}} Configure reusable blocks"
+      reading-time: "30"
       author: "{{< var vm.product >}}"
     - path: using-validmind-for-model-risk-management.html
       title: "Using {{< var vm.product >}} for Model Risk Management"
       subtitle: "Module 3"
       description: "{{< fa check >}} Set up and mange custom workflows <br> {{< fa check >}} Manage regulations and policies <br> {{< fa check >}} Set up attestations"
-      reading-time: "60"
+      reading-time: "50"
       author: "{{< var vm.product >}}"
     - path: organizational-oversight-reporting.html
       title: "Organizational Oversight & Reporting"
