--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -43,7 +43,7 @@ This second module is part of a four-part series:
 
 ::: {.f2}
 1. [The {{< var validmind.platform >}} model inventory](#the-validmind-inventory)
-2. [Configure model inventory fields](#configure-inventory-fields)
+2. [Configure custom fields](#configure-custom-fields)
 3. [Customize reusable templates](#customize-reusable-templates)
 4. [Configure reusable blocks](#configure-reusable-blocks)
 
@@ -123,7 +123,7 @@ When you're done, click [{{< fa chevron-right >}}]() to learn how to **customize
 
 ::::
 
-# Configure inventory fields {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Configure custom fields {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable}
 
@@ -152,7 +152,7 @@ Manage model inventory fields
 
 ::: {.f4}
 
-{{< include /guide/model-inventory/_inventory-field-types.qmd >}}
+{{< include /guide/model-inventory/_field-types.qmd >}}
 
 :::
 
@@ -170,7 +170,7 @@ Manage model inventory fields
 :::
 
 1. Click **{{< fa plus >}} Add Field**.
-2. Select the field [type]{.smallcaps}, enter a [name]{.smallcaps}, and a [description]{.smallcaps}.
+2. Select the field **[type]{.smallcaps}** and enter a **[name]{.smallcaps}**.
 3. Click **Save** to add your field.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
@@ -258,6 +258,59 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 2. On the **Permissions** tab, select **Edit Permissions** to modify inventory field permissions to or from that type.
 3. Toggle specific permissions for that stakeholder type by checking or unchecking the boxes next to the permission.
 4. Click **Save Permissions** to apply your changes.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
+## {.scrollable}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Manage model finding fields
+
+::: {.tc}
+[Learn more ...](/guide/model-validation/manage-model-finding-fields.qmd){.button target="_blank"}
+:::
+
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
+:::
+
+::: {.column width="70%" .bl .pl4 .f3}
+
+{{< include /guide/model-validation/_model-finding-fields.qmd >}}
+
+::: {.panel-tabset}
+
+### Add or edit finding fields
+
+{{< include /guide/model-validation/_add-edit-finding-fields.qmd >}}
+
+### Finding field types
+
+::: {.f4}
+
+{{< include /guide/model-inventory/_field-types.qmd >}}
+
+:::
+
+:::
+
+:::
+
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/settings/finding-custom-fields" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--l .three-quarters .auto-collapse-10}
+::: {.tc}
+**Add a finding field**
+:::
+
+1. Click **{{< fa plus >}} Add Field**.
+2. Select the field **[type]{.smallcaps}** and enter a **[name]{.smallcaps}**.
+3. Select the **[finding types]{.smallcaps}** this field is available on.
+4. Click **Save** to add your field.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
