Setup: Workflows for findings

--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -9,7 +9,7 @@ Learn from example workflow configurations to help you tailor workflows to fit y
 
 Workflows can be as simple or as complex as required, with multiple and discrete workflows supported for unique triggers and scenarios.
 
-For example, to cover activities in their model lifecycle up to model deployment, an organization has the following workflows configured:
+For example, to cover activities in their model lifecycle up to model deployment, an organization has the following model workflows configured:
 
 ::: {.panel-tabset}
 
