Renaming Setting up model workflows page

--- a/site/guide/model-workflows/setting-up-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-workflows.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Setting up model workflows"
+title: "Setting up workflows"
 date: last-modified
 listing:
   - id: model-workflows
@@ -11,6 +11,8 @@ listing:
     - manage-model-stages.qmd
     - configure-model-workflows.qmd
     - workflow-configuration-examples.qmd
+aliases: 
+  - setting-up-model-workflows.qmd
 ---
 
 {{< include /guide/model-workflows/_set-up-model-workflows.qmd >}}
