--- a/site/guide/model-workflows/setting-up-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-workflows.qmd
@@ -12,7 +12,7 @@ listing:
     - configure-model-workflows.qmd
     - workflow-configuration-examples.qmd
 aliases: 
-  - setting-up-model-workflows.qmd
+  - setting-up-workflows.qmd
 ---
 
 {{< include /guide/model-workflows/_set-up-model-workflows.qmd >}}
