--- a/site/guide/model-inventory/archive-delete-models.qmd
+++ b/site/guide/model-inventory/archive-delete-models.qmd
@@ -96,7 +96,7 @@ If a model was created in error, or you otherwise no longer require a model to b
 
 [^4]: [Manage model stages](/guide/model-workflows/manage-model-stages.qmd)
 
-[^5]: [Setting up model workflows](/guide/model-workflows/setting-up-model-workflows.qmd)
+[^5]: [Setting up workflows](/guide/model-workflows/setting-up-workflows.qmd)
 
 [^6]: [Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)
 
