--- a/site/guide/model-workflows/manage-workflow-tasks.qmd
+++ b/site/guide/model-workflows/manage-workflow-tasks.qmd
@@ -61,7 +61,7 @@ Once completed, tasks will be removed from your view.
 
 <!-- FOOTNOTES -->
 
-[^1]: [Workflow step types](setting-up-model-workflows.qmd#workflow-step-types)
+[^1]: [Workflow step types](setting-up-workflows.qmd#workflow-step-types)
 
 [^2]: [Manage roles](/guide/configuration/manage-roles.qmd)
 
@@ -75,7 +75,7 @@ Once completed, tasks will be removed from your view.
 
 [^7]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^8]: [Workflow states](setting-up-model-workflows.qmd#workflow-states)
+[^8]: [Workflow states](setting-up-workflows.qmd#workflow-states)
 
 [^9]: [Configure model workflows](configure-model-workflows.qmd)
 
