--- a/site/guide/workflows/setting-up-workflows.qmd
+++ b/site/guide/workflows/setting-up-workflows.qmd
@@ -12,7 +12,8 @@ listing:
     - configure-model-workflows.qmd
     - workflow-configuration-examples.qmd
 aliases: 
-  - setting-up-workflows.qmd
+  - setting-up-model-workflows.html
+  - /guide/model-workflows/setting-up-model-workflows.html
 ---
 
 {{< include /guide/model-workflows/_set-up-model-workflows.qmd >}}
