--- a/site/guide/model-inventory/archive-delete-models.qmd
+++ b/site/guide/model-inventory/archive-delete-models.qmd
@@ -98,7 +98,7 @@ If a model was created in error, or you otherwise no longer require a model to b
 
 [^5]: [Setting up workflows](/guide/workflows/setting-up-workflows.qmd)
 
-[^6]: [Working with model workflows](/guide/workflows/working-with-model-workflows.qmd)
+[^6]: [Working with workflows](/guide/workflows/working-with-workflows.qmd)
 
 [^7]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
