--- a/site/guide/model-validation/manage-model-finding-fields.qmd
+++ b/site/guide/model-validation/manage-model-finding-fields.qmd
@@ -181,7 +181,7 @@ To group finding fields, first create a finding field group:
     Click, hold, and drag to the right to reveal additional columns.
     :::
 
-[^4]: [Working with model workflows](/guide/workflows/working-with-model-workflows.qmd)
+[^4]: [Working with workflows](/guide/workflows/working-with-workflows.qmd)
 
 [^5]: [Finding field types](#finding-field-types)
 
