--- a/site/guide/workflows/configure-model-workflows.qmd
+++ b/site/guide/workflows/configure-model-workflows.qmd
@@ -119,7 +119,7 @@ Deleting workflow steps on workflows active on models may result in malfunctioni
 ## What's next
 
 - [Workflows FAQ](/faq/faq-workflows.qmd)
-- [Work with workflows](working-with-model-workflows.qmd)
+- [Work with workflows](working-with-workflows.qmd)
 
 
 <!-- FOOTNOTES -->
