--- a/site/guide/workflows/setting-up-workflows.qmd
+++ b/site/guide/workflows/setting-up-workflows.qmd
@@ -48,4 +48,4 @@ For more assistance configuring workflow step types, refer to our [Workflow conf
 
 ## What's next
 
-- [Working with model workflows](working-with-model-workflows.qmd)
+- [Working with workflows](working-with-workflows.qmd)
