--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -141,7 +141,7 @@ To group model inventory fields, first create an inventory field group:
     Click, hold, and drag to the right to reveal additional columns.
     :::
 
-[^4]: [Working with model workflows](/guide/workflows/working-with-model-workflows.qmd)
+[^4]: [Working with workflows](/guide/workflows/working-with-workflows.qmd)
 
 [^5]: [Inventory field types](#inventory-field-types)
 
