--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -145,7 +145,7 @@ To group model inventory fields, first create an inventory field group:
 
 [^5]: [Inventory field types](#inventory-field-types)
 
-[^6]: [Configure model workflows](/guide/workflows/configure-model-workflows.qmd)
+[^6]: [Configure workflows](/guide/workflows/configure-workflows.qmd)
 
 [^7]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
