--- a/site/guide/model-validation/manage-model-finding-fields.qmd
+++ b/site/guide/model-validation/manage-model-finding-fields.qmd
@@ -185,7 +185,7 @@ To group finding fields, first create a finding field group:
 
 [^5]: [Finding field types](#finding-field-types)
 
-[^6]: [Configure model workflows](/guide/workflows/configure-model-workflows.qmd)
+[^6]: [Configure workflows](/guide/workflows/configure-workflows.qmd)
 
 [^7]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
