--- a/site/guide/workflows/_workflow-step-types.qmd
+++ b/site/guide/workflows/_workflow-step-types.qmd
@@ -84,7 +84,7 @@ To configure a condition branch:
     To remove a path, click **{{< fa ellipsis-vertical >}}** and select **{{< fa trash-can >}} Remove Path**.
 4. When you are finished setting up all your branch paths, click **Update Step** to save your step.
 
-    Proceed with linking the Condition Branch with your subsequent steps.^[[Link workflow together](/guide/workflows/configure-model-workflows.qmd#link-workflow-together)]
+    Proceed with linking the Condition Branch with your subsequent steps.^[[Link workflow together](/guide/workflows/configure-workflows.qmd#link-workflow-together)]
 
 #### {{< fa clock >}} Wait
 
@@ -115,7 +115,7 @@ Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**,
 #### {{< fa circle-stop >}} End
 
 - Designates the end of your workflow.
-- Use this step when all of your other steps have been configured and linked together.^[[Link workflow together](/guide/workflows/configure-model-workflows.qmd#link-workflow-together)]
+- Use this step when all of your other steps have been configured and linked together.^[[Link workflow together](/guide/workflows/configure-workflows.qmd#link-workflow-together)]
 :::
 
 
@@ -129,7 +129,7 @@ Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**,
     Users must have write permissions for the field in order to enter values.
 
 
-[^step-types-2]: **[Configure model workflows](/guide/workflows/configure-model-workflows.qmd#create-custom-workflows):**<br><br>
+[^step-types-2]: **[Configure workflows](/guide/workflows/configure-workflows.qmd#create-custom-workflows):**<br><br>
 
     1. Configure two **{{< fa cube >}} Model Stage Change** steps for your associated rejection and approval stages.
     2. Then, from the bottom of your **{{< fa users >}} Approval** step:
