--- a/site/guide/workflows/configure-model-workflows.qmd
+++ b/site/guide/workflows/configure-model-workflows.qmd
@@ -1,12 +1,13 @@
 ---
-title: "Configure model workflows"
+title: "Configure workflows"
 date: last-modified
 aliases:
   - /guide/set-up-model-workflows.html
   - set-up-model-workflows.html
+  - /guide/model-workflows/configure-model-workflows.html
 ---
 
-{{< include /guide/workflows/_configure-model-workflows.qmd >}}
+{{< include /guide/workflows/_configure-workflows.qmd >}}
 
 ::: {.attn}
 
