--- a/site/guide/workflows/manage-model-stages.qmd
+++ b/site/guide/workflows/manage-model-stages.qmd
@@ -42,7 +42,7 @@ Make sure that the stage you're deleting is not associated with any workflows or
 ## What's next
 
 - [Workflows FAQ](/faq/faq-workflows.qmd)
-- [Configure model workflows](configure-model-workflows.qmd)
+- [Configure workflows](configure-workflows.qmd)
 
 
 <!-- FOOTNOTES -->
