--- a/site/guide/workflows/manage-model-workflows.qmd
+++ b/site/guide/workflows/manage-model-workflows.qmd
@@ -39,6 +39,6 @@ Review workflows associated with your models, and initiate or abort workflows co
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Configure custom workflows](configure-model-workflows.qmd)
+[^2]: [Configure custom workflows](configure-workflows.qmd)
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
