--- a/site/guide/workflows/manage-workflow-tasks.qmd
+++ b/site/guide/workflows/manage-workflow-tasks.qmd
@@ -71,13 +71,13 @@ Once completed, tasks will be removed from your view.
 
 [^5]: [Manage model stages](manage-model-stages.qmd)
 
-[^6]: [Configure model workflows](configure-model-workflows.qmd)
+[^6]: [Configure workflows](configure-workflows.qmd)
 
 [^7]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
 [^8]: [Workflow states](setting-up-workflows.qmd#workflow-states)
 
-[^9]: [Configure model workflows](configure-model-workflows.qmd)
+[^9]: [Configure workflows](configure-workflows.qmd)
 
 [^10]: [Transition model workflows](transition-model-workflows.qmd)
 
