--- a/site/guide/workflows/setting-up-workflows.qmd
+++ b/site/guide/workflows/setting-up-workflows.qmd
@@ -9,7 +9,7 @@ listing:
     fields: [title, description]
     contents:
     - manage-model-stages.qmd
-    - configure-model-workflows.qmd
+    - configure-workflows.qmd
     - workflow-configuration-examples.qmd
 aliases: 
   - /guide/model-workflows/setting-up-model-workflows.html
