--- a/site/guide/workflows/transition-model-workflows.qmd
+++ b/site/guide/workflows/transition-model-workflows.qmd
@@ -32,6 +32,6 @@ Transition a model's workflow into its next state, or reset a workflow on a mode
 
 [^2]: [Manage model stages](manage-model-stages.qmd)
 
-[^3]: [Configure model workflows](configure-model-workflows.qmd)
+[^3]: [Configure workflows](configure-workflows.qmd)
 
 [^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
