--- a/site/guide/model-documentation/submit-for-approval.qmd
+++ b/site/guide/model-documentation/submit-for-approval.qmd
@@ -33,7 +33,7 @@ aliases:
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Configure model workflows](/guide/workflows/configure-model-workflows.qmd)
+[^2]: [Configure workflows](/guide/workflows/configure-workflows.qmd)
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
