--- a/site/guide/workflows/working-with-workflows.qmd
+++ b/site/guide/workflows/working-with-workflows.qmd
@@ -9,7 +9,7 @@ listing:
     sort: false
     fields: [title, description]
     contents:
-    - manage-model-workflows.qmd
+    - manage-workflows.qmd
     - transition-model-workflows.qmd
     - manage-workflow-tasks.qmd
 aliases:
