--- a/site/guide/workflows/manage-workflows.qmd
+++ b/site/guide/workflows/manage-workflows.qmd
@@ -1,6 +1,8 @@
 ---
-title: "Manage model workflows"
+title: "Manage workflows"
 date: last-modified
+aliases:
+  - /guide/model-workflows/manage-model-workflows.html
 ---
 
 Review workflows associated with your models, and initiate or abort workflows configured for your organization on your models.
