--- a/site/guide/workflows/manage-workflow-tasks.qmd
+++ b/site/guide/workflows/manage-workflow-tasks.qmd
@@ -47,7 +47,7 @@ To show older tasks, scroll down to the bottom and click **Load More**.
 
 To view the details of a model attached to a workflow task, click the button displaying the name of the model.
 
-### Transition model workflows
+### Transition workflows
 
 If an action is available to your role,[^10] you'll see it appear as an action button under a workflow task:
 
@@ -79,6 +79,6 @@ Once completed, tasks will be removed from your view.
 
 [^9]: [Configure workflows](configure-workflows.qmd)
 
-[^10]: [Transition model workflows](transition-model-workflows.qmd)
+[^10]: [Transition workflows](transition-workflows.qmd)
 
 [^11]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
