--- a/site/guide/workflows/working-with-workflows.qmd
+++ b/site/guide/workflows/working-with-workflows.qmd
@@ -10,7 +10,7 @@ listing:
     fields: [title, description]
     contents:
     - manage-workflows.qmd
-    - transition-model-workflows.qmd
+    - transition-workflows.qmd
     - manage-workflow-tasks.qmd
 aliases:
   - /guide/working-with-model-workflows.html
