--- a/site/releases/2024/2024-sep-09/release-notes.qmd
+++ b/site/releases/2024/2024-sep-09/release-notes.qmd
@@ -53,7 +53,7 @@ Labels: enhancement
 
 Need to start over with a model? You can now reset your model's workflow to its initial state in the lifecycle.
 
-[Transition model workflows](/guide/workflows/transition-model-workflows.qmd#reset-your-model-workflow){.button .button-green}
+[Transition workflows](/guide/workflows/transition-workflows.qmd#reset-your-model-workflow){.button .button-green}
 
 :::
 
