--- a/site/guide/workflows/_review-active-workflows.qmd
+++ b/site/guide/workflows/_review-active-workflows.qmd
@@ -25,7 +25,7 @@ To review the details for workflows currently active on a specific model:
 
     Click **{{< fa chevron-down >}}** to reveal notes, and **{{< fa chevron-up >}}** to hide them.
     <br><br>
-    [Transition model workflows](/guide/workflows/transition-model-workflows.qmd)
+    [Transition workflows](/guide/workflows/transition-workflows.qmd)
 
 ::::
 
