--- a/site/guide/workflows/transition-workflows.qmd
+++ b/site/guide/workflows/transition-workflows.qmd
@@ -1,6 +1,8 @@
 ---
-title: "Transition model workflows"
+title: "Transition workflows"
 date: last-modified
+aliases: 
+  - /guide/model-workflows/transition-model-workflows.html
 ---
 
 Transition a model's workflow into its next state, or reset a workflow on a model.
@@ -17,9 +19,9 @@ Transition a model's workflow into its next state, or reset a workflow on a mode
 
 :::
 
-## Transition model workflows
+## Transition workflows
 
-{{< include _transition-model-workflows.qmd >}}
+{{< include _transition-workflows.qmd >}}
 
 ## Reset model workflows
 
