--- a/site/guide/workflows/transition-workflows.qmd
+++ b/site/guide/workflows/transition-workflows.qmd
@@ -25,7 +25,7 @@ Transition a model's workflow into its next state, or reset a workflow on a mode
 
 ## Reset model workflows
 
-{{< include _reset-model-workflows.qmd >}}
+{{< include _reset-workflows.qmd >}}
 
 
 <!-- FOOTNOTES -->
