--- a/site/guide/workflows/_configure-workflows.qmd
+++ b/site/guide/workflows/_configure-workflows.qmd
@@ -1,5 +1,5 @@
 :::: {.content-visible unless-format="revealjs"}
-Configure workflows to match your organizational needs throughout your model lifecycles. Workflows can be as simple or as complex as required, with multiple and discrete workflows supported for unique triggers and scenarios.
+Set up workflows to match your organizational needs. Workflows can be as simple or as complex as required, with multiple and discrete workflows supported for unique triggers and scenarios.
 
 ::: {.callout}
 For more assistance configuring workflows, refer to our [Workflow configuration examples](/guide/workflows/workflow-configuration-examples.qmd).
@@ -8,6 +8,6 @@ For more assistance configuring workflows, refer to our [Workflow configuration 
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
-Workflows can be as simple or as complex as required, with multiple and discrete workflows supported for unique triggers and scenarios.
+Set up workflows to match your organizational needs. Workflows can be as simple or as complex as required, with multiple and discrete workflows supported for unique triggers and scenarios.
 
 ::::
