Edit: Add new workflows in docs

--- a/site/guide/workflows/_add-new-workflows.qmd
+++ b/site/guide/workflows/_add-new-workflows.qmd
@@ -5,28 +5,64 @@ To add a new blank workflow:
 
 1. Under Workspace, select **Workflows**.
 
-1. Click **{{< fa plus >}} Add Workflow**.
+1. Select the tab for the type of workflow to add:
 
-1. On the Add New Workflow modal, enter in a **[title]{.smallcaps}** and a **[description]{.smallcaps}** the workflow.
+    - **Model Workflows** — Workflows that apply to models in your inventory.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)]
+    - **Finding Workflows** — Workflows that apply to logged findings.^[[Working with model findings](/guide/model-validation/working-with-model-findings.qmd)]
 
-1. Under **[workflow start]{.smallcaps}**, select when the workflow should be initiated:
+::: {.panel-tabset}
+
+#### Add Model Workflows
+
+a. Click **{{< fa plus >}} Add Model Workflow**.
+
+a. On the Add New Model Workflow modal, enter in a **[title]{.smallcaps}** and a **[description]{.smallcaps}** the workflow.
+
+a. Under **[workflow start]{.smallcaps}**, select when the workflow should be initiated:
 
     - **Manually** — Start this workflow manually.^[[Initiate model workflows](/guide/workflows/manage-workflows.qmd#initiate-model-workflows)]
-    - **On Model Registration** — Start this workflow when a model is registered in your model inventory.[^add-workflows]
+    - **On Model Registration** — Start this workflow when a model is registered in your model inventory.[^on-model-registration]
     - **On Model Field Change** — Start this workflow on a change to a specific model inventory field.^[[Edit model inventory fields](/guide/model-inventory/edit-model-inventory-fields.qmd)]
 
-1. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow based on the start date in days, weeks, months, or years.
+a. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow based on the start date in days, weeks, months, or years.
 
-1. Click **Add Workflow** to save your blank workflow, and then [configure your workflow steps](/guide/workflows/configure-workflows.qmd#configure-workflow-steps).
+a. Click **Add Model Workflow** to save your blank workflow, and then [configure your workflow steps](/guide/workflows/configure-workflows.qmd#configure-workflow-steps).
+
+#### Add Finding Workflows
+
+a. Click **{{< fa plus >}} Add Finding Workflow**.
+
+a. On the Add New Finding Workflow modal, enter in a **[title]{.smallcaps}** and a **[description]{.smallcaps}** the workflow.
+
+a. Under **[workflow start]{.smallcaps}**, select when the workflow should be initiated:
+
+    - **Manually** — Start this workflow manually.^[[Initiate model workflows](/guide/workflows/manage-workflows.qmd#initiate-model-workflows)]
+    - **On Finding Registration** — Start this workflow when a finding is logged on a model.[^on-finding-registration]
+
+a. Select the **[finding type]{.smallcaps}**^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)] this workflow applies to.
+
+a. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow based on the start date in days, weeks, months, or years.
+
+a. Click **Add Finding Workflow** to save your blank workflow, and then [configure your workflow steps](/guide/workflows/configure-workflows.qmd#configure-workflow-steps).
+
+:::
 
 
 <!-- ADDITIONAL FOOTNOTES -->
 
-[^add-workflows]:
+[^on-model-registration]:
 
     ::: {.callout title="Please note that only one workflow can be configured to initiate on model registration."}
     <br>
     [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
+
+    :::
+
+[^on-finding-registration]:
+
+    ::: {.callout title="Please note that only one workflow can be configured to initiate on registration for each type of finding."}
+    <br>
+    [Add and manage model findings](/guide/model-validation/add-manage-model-findings.qmd)
 
     :::
 
