--- a/site/guide/workflows/_review-active-workflows.qmd
+++ b/site/guide/workflows/_review-active-workflows.qmd
@@ -1,7 +1,11 @@
 :::: {.content-visible unless-format="revealjs"}
-Workflows are configured by an administrator in advance. When transitioning a workflow, verify that the workflow steps reflect your organization's requirements for that part of the model lifecycle.
+Workflows are configured by an administrator in advance. When transitioning a workflow, verify that the workflow steps reflect your organization's requirements.
 
-To review the details for workflows currently active on a specific model:
+To review the details for workflows currently active:
+
+::: {.panel-tabset}
+
+#### On models
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
@@ -17,6 +21,22 @@ To review the details for workflows currently active on a specific model:
     - **Activity** — History of updates to the workflow on that model, including notes submitted during transitions.[^notes]
     - **Findings** — Findings for that model created within the duration of that workflow's runtime.
     - **Workflow**^[Hover over a workflow step to view an animation of the steps connecting to and from that step.] — Overview of the entire workflow. The current workflow step is highlighted on this view.
+
+#### On findings
+
+1. On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmdl#view-model-findings)] locate the [active workflows]{.smallcaps} section.
+
+1. Click on the name of any active workflow to review that specific workflow's details.
+
+1. Click on the tab you would like to review:
+
+    - **Details** — Name and description (if present) of the workflow, the workflow's status and progress (if applicable), when it was created, and when it was started.
+    - **Activity** — History of updates to the workflow on that finding, including notes submitted during transitions.[^notes]
+    - **Workflow**^[Hover over a workflow step to view an animation of the steps connecting to and from that step.] — Overview of the entire workflow. The current workflow step is highlighted on this view.
+
+
+:::
+
 
 
 <!-- FOOTNOTES -->
