Edit: Review workflow histories in docs

--- a/site/guide/workflows/_review-workflow-history.qmd
+++ b/site/guide/workflows/_review-workflow-history.qmd
@@ -1,11 +1,17 @@
 :::: {.content-visible unless-format="revealjs"}
-Review a timeline of workflows running or previously run on a model:
+Review a timeline of workflows running or previously run:
+
+::: {.panel-tabset}
+
+#### On models
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
 2. Select a model or find your model by applying a filter or searching for it.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)]
 
-3. On the landing page of your model, locate the Workflows section. If workflows are running or have previously run on your model, you can:
+3. On the landing page of your model, locate the Workflows section.
+
+    If workflows are running or have previously run on your model, you can:
 
     - Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific workflows.
 
@@ -16,6 +22,24 @@ Review a timeline of workflows running or previously run on a model:
         - **Finished** — Workflows that have reached an {{< fa circle-stop >}} End state.^[[Workflow step types](/guide/workflows/setting-up-workflows.qmd#workflow-step-types)]
         - **Aborted** — Cancelled workflows.^[[Abort workflows](/guide/workflows/manage-workflows.qmd#abort-workflows)]
         - **Available** — Workflows available to be run manually.^[[Initiate model workflows](/guide/workflows/manage-workflows.qmd#initiate-model-workflows)]
+
+#### On findings
+
+On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmdl#view-model-findings)] locate the [active workflows]{.smallcaps} section.
+
+If workflows are running or have previously run on your finding, you can:
+
+- Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific workflows.
+
+- Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
+    - **Active** — Workflows currently running.
+    - **Scheduled** — Workflows slated to run in the future.
+    - **Waiting** — Workflows in a {{< fa clock >}} Wait state.^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]
+    - **Finished** — Workflows that have reached an {{< fa circle-stop >}} End state.^[[Workflow step types](/guide/workflows/setting-up-workflows.qmd#workflow-step-types)]
+    - **Aborted** — Cancelled workflows.^[[Abort workflows](/guide/workflows/manage-workflows.qmd#abort-workflows)]
+    - **Available** — Workflows available to be run manually.^[[Initiate model workflows](/guide/workflows/manage-workflows.qmd#initiate-model-workflows)]
+
+:::
 
 ::::
 
