--- a/site/guide/workflows/_add-new-workflows.qmd
+++ b/site/guide/workflows/_add-new-workflows.qmd
@@ -20,7 +20,7 @@ a. On the Add New Model Workflow modal, enter in a **[title]{.smallcaps}** and a
 
 a. Under **[workflow start]{.smallcaps}**, select when the workflow should be initiated:
 
-    - **Manually** — Start this workflow manually.^[[Initiate model workflows](/guide/workflows/manage-workflows.qmd#initiate-model-workflows)]
+    - **Manually** — Start this workflow manually.^[[Initiate model workflows](/guide/workflows/manage-workflows.qmd#initiate-workflows)]
     - **On Model Registration** — Start this workflow when a model is registered in your model inventory.[^on-model-registration]
     - **On Model Field Change** — Start this workflow on a change to a specific model inventory field.^[[Edit model inventory fields](/guide/model-inventory/edit-model-inventory-fields.qmd)]
 
@@ -36,7 +36,7 @@ a. On the Add New Finding Workflow modal, enter in a **[title]{.smallcaps}** and
 
 a. Under **[workflow start]{.smallcaps}**, select when the workflow should be initiated:
 
-    - **Manually** — Start this workflow manually.^[[Initiate model workflows](/guide/workflows/manage-workflows.qmd#initiate-model-workflows)]
+    - **Manually** — Start this workflow manually.^[[Initiate model workflows](/guide/workflows/manage-workflows.qmd#initiate-workflows)]
     - **On Finding Registration** — Start this workflow when a finding is logged on a model.[^on-finding-registration]
 
 a. Select the **[finding type]{.smallcaps}**^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)] this workflow applies to.
@@ -82,7 +82,7 @@ a. On the Add New Workflow modal, enter in a **[title]{.smallcaps}** and a **[de
 
 a. Under **[workflow start]{.smallcaps}**, select when the workflow should be initiated:
 
-    - **Manually** — [Start this workflow manually.](/guide/workflows/manage-workflows.qmd#initiate-model-workflows){target="_blank"}
+    - **Manually** — [Start this workflow manually.](/guide/workflows/manage-workflows.qmd#initiate-workflows){target="_blank"}
     - **On Model Registration** — Start this workflow when a model is [registered in your model inventory](/guide/model-inventory/register-models-in-inventory.qmd){target="_blank"}.
     - **On Model Field Change** — Start this workflow on a change to a [specific model inventory field](/guide/model-inventory/edit-model-inventory-fields.qmd){target="_blank"}.
 
