--- a/site/guide/workflows/manage-workflows.qmd
+++ b/site/guide/workflows/manage-workflows.qmd
@@ -18,7 +18,7 @@ Review workflows associated with your models, and initiate or abort workflows co
 
 :::
 
-## Review model workflows
+## Review workflows
 
 ### Review active workflows
 
@@ -28,7 +28,7 @@ Review workflows associated with your models, and initiate or abort workflows co
 
 {{< include /guide/workflows/_review-workflow-history.qmd >}}
 
-## Initiate model workflows
+## Initiate workflows
 
 {{< include /guide/workflows/_initiate-workflows.qmd >}}
 
