--- a/site/guide/workflows/_review-workflow-history.qmd
+++ b/site/guide/workflows/_review-workflow-history.qmd
@@ -21,7 +21,7 @@ Review a timeline of workflows running or previously run:
         - **Waiting** — Workflows in a {{< fa clock >}} Wait state.^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]
         - **Finished** — Workflows that have reached an {{< fa circle-stop >}} End state.^[[Workflow step types](/guide/workflows/setting-up-workflows.qmd#workflow-step-types)]
         - **Aborted** — Cancelled workflows.^[[Abort workflows](/guide/workflows/manage-workflows.qmd#abort-workflows)]
-        - **Available** — Workflows available to be run manually.^[[Initiate model workflows](/guide/workflows/manage-workflows.qmd#initiate-model-workflows)]
+        - **Available** — Workflows available to be run manually.^[[Initiate model workflows](/guide/workflows/manage-workflows.qmd#initiate-workflows)]
 
 #### On findings
 
@@ -37,7 +37,7 @@ If workflows are running or have previously run on your finding, you can:
     - **Waiting** — Workflows in a {{< fa clock >}} Wait state.^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]
     - **Finished** — Workflows that have reached an {{< fa circle-stop >}} End state.^[[Workflow step types](/guide/workflows/setting-up-workflows.qmd#workflow-step-types)]
     - **Aborted** — Cancelled workflows.^[[Abort workflows](/guide/workflows/manage-workflows.qmd#abort-workflows)]
-    - **Available** — Workflows available to be run manually.^[[Initiate model workflows](/guide/workflows/manage-workflows.qmd#initiate-model-workflows)]
+    - **Available** — Workflows available to be run manually.^[[Initiate model workflows](/guide/workflows/manage-workflows.qmd#initiate-workflows)]
 
 :::
 
@@ -62,6 +62,6 @@ Review a timeline of workflows running or previously run on a model:
         - **Waiting** — Workflows in a [{{< fa clock >}} Wait state](/guide/workflows/setting-up-workflows.qmd#conditional-requirements){target="_blank"}.
         - **Finished** — Workflows that have reached an [{{< fa circle-stop >}} End state](/guide/workflows/setting-up-workflows.qmd#workflow-step-types){target="_blank"}.
         - **Aborted** — [Cancelled workflows.](/guide/workflows/manage-workflows.qmd#abort-workflows){target="_blank"}
-        - **Available** — Workflows available to be [run manually](/guide/workflows/manage-workflows.qmd#initiate-model-workflows){target="_blank"}.
+        - **Available** — Workflows available to be [run manually](/guide/workflows/manage-workflows.qmd#initiate-workflows){target="_blank"}.
 
 ::::
