Edit: Initiate workflows in docs

--- a/site/guide/workflows/_review-workflow-history.qmd
+++ b/site/guide/workflows/_review-workflow-history.qmd
@@ -1,5 +1,5 @@
 :::: {.content-visible unless-format="revealjs"}
-Review a timeline of workflows running or previously run:
+Review timelines of workflows running or previously run:
 
 ::: {.panel-tabset}
 
