--- a/site/guide/workflows/_initiate-workflows.qmd
+++ b/site/guide/workflows/_initiate-workflows.qmd
@@ -3,7 +3,11 @@
 By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has sufficient permissions to manually start model workflows.
 :::
 
-To manually start a workflow[^initiate-workflows] for a specific model:
+To manually start workflows[^initiate-workflows]:
+
+::: {.panel-tabset}
+
+#### On models
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
@@ -20,9 +24,28 @@ To manually start a workflow[^initiate-workflows] for a specific model:
 
 1. Click **{{< fa arrow-right >}} Run Workflow Now** to confirm.
 
+#### On findings
+
+1. On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmdl#view-model-findings)] locate the [active workflows]{.smallcaps} section.
+
+1. Click **{{< fa arrow-right-arrow-left >}} See All Workflows**.
+
+1. Select **{{< fa arrow-right >}} Run Workflow** for the workflow you'd like to initiate, then select your desired **[workflow start]{.smallcaps}** option:
+
+    - **Run Now** — Workflow starts instantly.
+    - **Scheduled Run** — Set a future date to run the workflow.
+
+1. Click **{{< fa arrow-right >}} Run Workflow Now** to confirm.
+
+:::
+
 ### Resume workflows
 
 To manually resume a workflow in a {{< fa clock >}} Wait state:^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]
+
+::: {.panel-tabset}
+
+#### On models
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
@@ -33,6 +56,16 @@ To manually resume a workflow in a {{< fa clock >}} Wait state:^[[Conditional re
 1. For the workflow you'd like to manually advance, click **{{< fa arrow-right-arrow-left >}} Resume Workflow** to open up the workflow's step overview.
 
 1. On the **{{< fa clock >}} Wait** step, double-click on **{{< fa arrow-right-arrow-left >}}** to advance the workflow immediately.
+
+#### On findings
+
+1. On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmdl#view-model-findings)] locate the [active workflows]{.smallcaps} section.
+
+1. For the workflow you'd like to manually advance, click **{{< fa arrow-right-arrow-left >}} Resume Workflow** to open up the workflow's step overview.
+
+1. On the **{{< fa clock >}} Wait** step, double-click on **{{< fa arrow-right-arrow-left >}}** to advance the workflow immediately.
+
+:::
 
 
 <!-- ADDITIONAL FOOTNOTES -->
