--- a/site/guide/workflows/_review-active-workflows.qmd
+++ b/site/guide/workflows/_review-active-workflows.qmd
@@ -1,7 +1,7 @@
 :::: {.content-visible unless-format="revealjs"}
 Workflows are configured by an administrator in advance. When transitioning a workflow, verify that the workflow steps reflect your organization's requirements.
 
-To review the details for workflows currently active:
+To review details for workflows currently active:
 
 ::: {.panel-tabset}
 
@@ -50,7 +50,7 @@ To review the details for workflows currently active:
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
-To review the details for workflows currently active on a specific model:
+To review details for workflows currently active:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
