--- a/site/guide/workflows/_abort-workflows.qmd
+++ b/site/guide/workflows/_abort-workflows.qmd
@@ -3,7 +3,11 @@
 By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has sufficient permissions to abort workflows.
 :::
 
-To cancel a run of a workflow on a model:
+To cancel a run of a workflow:
+
+::: {.panel-tabset}
+
+#### On models
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
@@ -16,6 +20,21 @@ To cancel a run of a workflow on a model:
 1. On the workflow's detail modal, click on the **{{< fa ellipsis-vertical >}}** in the top-right hand corner and select **{{< fa ban >}} Abort Workflow**.
 
 1. On the confirmation page, make sure **[restart workflow after aborting]{.smallcaps}** is untoggled, then click **{{< fa arrow-right >}} Yes, Abort Workflow** to abort your workflow.
+
+#### On findings
+
+1. On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmdl#view-model-findings)] locate the [active workflows]{.smallcaps} section.
+
+1. Click on the name of the workflow you'd like to abort to open that specific workflow's details.
+
+1. On the workflow's detail modal, click on the **{{< fa ellipsis-vertical >}}** in the top-right hand corner and select **{{< fa ban >}} Abort Workflow**.
+
+1. On the confirmation page, make sure **[restart workflow after aborting]{.smallcaps}** is untoggled, then click **{{< fa arrow-right >}} Yes, Abort Workflow** to abort your workflow.
+
+
+:::
+
+
 ::::
 
 
