--- a/site/guide/workflows/_transition-workflows.qmd
+++ b/site/guide/workflows/_transition-workflows.qmd
@@ -1,9 +1,15 @@
 :::: {.content-visible unless-format="revealjs"}
 ::: {.callout-important title="Roles and action visibility"}
-Depending on the configuration of your workflows, you may or may not be able to move a model into another workflow state as actions can be gated to only users of certain roles.
+Depending on the configuration of your workflows, you may or may not be able to move a workflow into another workflow state as actions can be gated to only users of certain roles.
 
-When all the actions that can be performed by your role are completed for that model at that stage of the workflow, actions will disappear from your view.
+When all the actions that can be performed by your role are completed for that model or finding at that stage of the workflow, actions will disappear from your view.
 :::
+
+To transition a workflow into next steps:
+
+::: {.panel-tabset}
+
+#### On models
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
@@ -15,6 +21,18 @@ When all the actions that can be performed by your role are completed for that m
 
     - Click **{{< fa arrow-right >}}** to open up the transition panel for your selected action. This arrow will be followed by the action name.
     - Enter your **[notes]{.smallcaps}** and any other additional inventory fields^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)] then click **Submit**.
+
+#### On findings
+
+1. On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmdl#view-model-findings)] locate the [active workflows]{.smallcaps} section.
+
+1. If an action is available to your role, you'll see it listed under that workflow:
+
+    - Click **{{< fa arrow-right >}}** to open up the transition panel for your selected action. This arrow will be followed by the action name.
+    - Enter your **[notes]{.smallcaps}** and any other additional inventory fields^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)] then click **Submit**.
+
+:::
+
 
 ::::
 
