--- a/site/faq/faq.qmd
+++ b/site/faq/faq.qmd
@@ -13,7 +13,7 @@ listing:
     - path: faq-organizations.qmd
       title: "Access and permissions"
     - path: faq-workflows.qmd
-      title: "Model workflows"
+      title: "Workflows"
     - path: faq-inventory.qmd
       title: "Model inventory and activity"
     - path: faq-documentation.qmd
