--- a/site/guide/guides.qmd
+++ b/site/guide/guides.qmd
@@ -27,7 +27,7 @@ listing:
     contents:
     - configuration/personalize-validmind.qmd
     - configuration/manage-platform-notifications.qmd
-  - id: guides-model-workflows
+  - id: guides-workflows
     type: grid
     max-description-length: 250
     sort: false
@@ -158,11 +158,11 @@ Further customize your personal user experience within the {{< var validmind.pla
 :::{#guides-customize}
 :::
 
-## Model workflows
+## Workflows
 
-Use workflows within the {{< var vm.platform >}} to match your organizational needs for overseeing the review and approval of models throughout the model lifecycle:
+Use workflows within the {{< var vm.platform >}} to match your organizational needs for risk management oversight:
 
-:::{#guides-model-workflows}
+:::{#guides-workflows}
 :::
 
 ## Model inventory 
