--- a/site/guide/workflows/setting-up-workflows.qmd
+++ b/site/guide/workflows/setting-up-workflows.qmd
@@ -2,7 +2,7 @@
 title: "Setting up workflows"
 date: last-modified
 listing:
-  - id: model-workflows
+  - id: workflow-setup
     type: grid
     max-description-length: 250
     sort: false
@@ -19,7 +19,7 @@ aliases:
 
 ## Workflow setup
 
-:::{#model-workflows}
+:::{#workflow-setup}
 :::
 
 ## Workflow elements
