--- a/site/guide/workflows/transition-workflows.qmd
+++ b/site/guide/workflows/transition-workflows.qmd
@@ -23,7 +23,7 @@ Transition a model's workflow into its next state, or reset a workflow on a mode
 
 {{< include _transition-workflows.qmd >}}
 
-## Reset model workflows
+## Reset workflows
 
 {{< include _reset-workflows.qmd >}}
 
